--- a/app/mailer/templates/mailer/index.html
+++ b/app/mailer/templates/mailer/index.html
@@ -3,6 +3,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+
 	<title>Greetings Cards Spammers</title>
 	<script src="{% static "js/jquery-2.1.1.js" %}"></script>
 	<script>
@@ -12,30 +16,28 @@
 			hoveretr = this;
 		$("td:contains(.)").each(function(){
 
-	 function processchildrow(theparentrow) {
-		 parenttbl = $(theparentrow).parents("table");
+	function processchildrow(theparentrow) {
+		parenttbl = $(theparentrow).parents("table");
 		 found = 0; // find state machine marker
-		 markrows = new Array();
-		 parenttbl.find("tr").each(function(){
-			 var foundrow = this;
-			 if(found == 0 && foundrow == theparentrow) found = 1;
-			 if(found == 1 && $(foundrow).is(":contains(Orders)")) {
-				 orderscll= $(foundrow).find("td").eq(2);
+		markrows = new Array();
+		parenttbl.find("tr").each(function(){
+			var foundrow = this;
+			if(found == 0 && foundrow == theparentrow) found = 1;
+			if(found == 1 && $(foundrow).is(":contains(Orders)")) {
+				orderscll= $(foundrow).find("td").eq(2);
 				 numorders=+orderscll.text().split(" ")[1]; //use + for faster integer
-				 if(numorders>3) markrows[markrows.length]=foundrow;//put in array for marking later
-				 return
-			 }
+				if(numorders>3) markrows[markrows.length]=foundrow;//put in array for marking later
+				return
+			}
 			 if(found == 1 && foundrow != theparentrow  &&  $(foundrow).find("td:first").text().length) // has company name in first cell
-				 found = 2;
-		 });
-		 for(key in markrows) {
-			 row=markrows[key]
-			 $(row).find("td").css("background-color", "yellow");
-		 }
-		 return markrows
- 
- 
-	 }
+				found = 2;
+		});
+		for(key in markrows) {
+			row=markrows[key]
+			$(row).find("td").css("background-color", "yellow");
+		}
+		return markrows
+	}
 
 			price = $(this).text();
 			trueprice = "";
@@ -100,9 +102,13 @@
 		<td></td>
 		<td></td>
 		<td>
-		{% if page_obj.has_next %}
-			<a href="?page={{ page_obj.next_page_number }}" class="pager-next{% if not page_obj.has_next %} inactive{% endif %}">&raquo;</a>
-		{% endif %}
+	{% for num in page_obj.paginator.page_range %}
+        {% if page_obj.number == num %}
+        	<a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+        	<a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+        {% endif %}
+    {% endfor %}
 		</td>
 	</tr>
 	{% endif %}
@@ -130,5 +136,10 @@
 		{% endfor %}
 	</table>
 	</div>
+	<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
